fix[bonus+]: wrapped all the difficulty selection in one function and created a function for the selected difficulty button style

--- a/bonus+/css/style.css
+++ b/bonus+/css/style.css
@@ -28,6 +28,13 @@ h2 {
   margin-top: 20px;
 }
 
+#easy:hover,
+#medium:hover,
+#difficult:hover {
+  background-color: lightcoral;
+  color: #fff;
+}
+
 .difficulty-btn button {
   border: none;
   background-color: lightgreen;
